<?xml version="1.0" encoding="utf-8"?>
<!-- Anissa Braca - Bow Wow Groomers App Main Layout -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- EditText for weight input -->
    <EditText
        android:id="@+id/weightInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/weight_hint"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"/>

    <!-- CheckBox for Trim Nails -->
    <CheckBox
        android:id="@+id/trimNailsCheckBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/trim_nails"
        app:layout_constraintTop_toBottomOf="@id/weightInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- CheckBox for Flea Bath -->
    <CheckBox
        android:id="@+id/fleaBathCheckBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/flea_bath"
        app:layout_constraintTop_toBottomOf="@id/trimNailsCheckBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- CheckBox for Massage -->
    <CheckBox
        android:id="@+id/massageCheckBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/massage"
        app:layout_constraintTop_toBottomOf="@id/fleaBathCheckBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- TextView for displaying the total cost -->
    <TextView
        android:id="@+id/totalCostTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/default_cost"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@id/massageCheckBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Button for Calculate -->
    <Button
        android:id="@+id/calculateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        android:onClick="calculateCost"
        app:layout_constraintTop_toBottomOf="@id/totalCostTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/resetButton"/>

    <!-- Button for Reset -->
    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:onClick="resetFields"
        app:layout_constraintTop_toBottomOf="@id/totalCostTextView"
        app:layout_constraintStart_toEndOf="@id/calculateButton"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Button for Order -->
    <Button
        android:id="@+id/orderButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/order"
        android:onClick="placeOrder"
        app:layout_constraintTop_toBottomOf="@id/calculateButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
